Added libraries and changed image location

--- a/image/Dockerfile
+++ b/image/Dockerfile
@@ -7,3 +7,31 @@ FROM jupyter/datascience-notebook
 
 # If you do switch to root, always be sure to add a "USER $NB_USER" command at the end of the
 # file to ensure the image runs as a unprivileged user by default.
+
+USER root
+
+RUN python3 -m pip install --no-cache-dir --upgrade pip && \
+    python3 -m pip install --no-cache-dir \
+    jupyter \
+    tensorflow-cpu \
+    torch \ 
+    torchvision \
+    torchaudio \
+    jax \
+    jaxlib \
+    optax
+
+RUN python3 -m pip install --no-cache-dir \
+    transformers \
+    datasets\
+    nltk \
+    pytorch_lightning \
+    gradio \
+    sentencepiece \
+    seqeval \
+    spacy
+
+
+USER ${NB_UID}
+
+WORKDIR "${HOME}"
