--- a/.github/workflows/docker.yml
+++ b/.github/workflows/docker.yml
@@ -62,7 +62,7 @@ jobs:
           context: image/
           file: image/Dockerfile
           tags: |
-            Research Studios Austria/prototAIp-notebook:latest
+            michaelbochrsa/prototaip-notebook:latest
           push: false
 
       - name: Run tests
@@ -82,4 +82,4 @@ jobs:
           context: image/
           file: image/Dockerfile
           tags: |
-            Research Studios Austria/prototAIp-notebook:${{steps.getrefs.outputs.sha12}}, Research Studios Austria/prototAIp-notebook:latest
+            michaelbochrsa/prototaip-notebook:${{steps.getrefs.outputs.sha12}}, michaelbochrsa/prototaip-notebook:latest
