--- a/.github/workflows/docker.yml
+++ b/.github/workflows/docker.yml
@@ -48,16 +48,17 @@ jobs:
       - name: Get refs - this will be used as tags later on
         shell: bash
         run: |
-          echo "::set-output name=sha12::$(echo ${GITHUB_SHA} | cut -c1-12)"
+          echo "name=sha12::$(echo ${GITHUB_SHA} | cut -c1-12)" >> $GITHUB_OUTPUT
+
         id: getrefs
 
       - name: Set up Docker Buildx
-        uses: docker/setup-buildx-action@v1
+        uses: docker/setup-buildx-action@v2
         with:
           driver: docker # to be able to test the image locally
 
       - name: Build # Build only to be able to run tests
-        uses: docker/build-push-action@v2
+        uses: docker/build-push-action@v3
         with:
           context: image/
           file: image/Dockerfile
@@ -70,14 +71,14 @@ jobs:
 
       - name: Login to Docker Hub
         if: github.ref == 'refs/heads/master' || github.ref == 'refs/heads/main'
-        uses: docker/login-action@v1
+        uses: docker/login-action@v2
         with:
           username: ${{secrets.DOCKERHUB_USERNAME}}
           password: ${{secrets.DOCKERHUB_TOKEN}}
 
       - name: Push
         if: github.ref == 'refs/heads/master' || github.ref == 'refs/heads/main'
-        uses: docker/build-push-action@v2
+        uses: docker/build-push-action@v3
         with:
           context: image/
           file: image/Dockerfile
