--- a/.github/workflows/docker.yml
+++ b/.github/workflows/docker.yml
@@ -44,12 +44,10 @@ jobs:
         run: |
           python -m pip install --upgrade pip
           make install-dev-env
-
       - name: Get refs - this will be used as tags later on
         shell: bash
         run: |
-          echo "name=sha12::$(echo ${GITHUB_SHA} | cut -c1-12)" >> $GITHUB_OUTPUT
-
+          echo "::set-output name=sha12::$(echo ${GITHUB_SHA} | cut -c1-12)"
         id: getrefs
 
       - name: Set up Docker Buildx
@@ -58,7 +56,7 @@ jobs:
           driver: docker # to be able to test the image locally
 
       - name: Build # Build only to be able to run tests
-        uses: docker/build-push-action@v3
+        uses: docker/build-push-action@v2
         with:
           context: image/
           file: image/Dockerfile
@@ -71,17 +69,16 @@ jobs:
 
       - name: Login to Docker Hub
         if: github.ref == 'refs/heads/master' || github.ref == 'refs/heads/main'
-        uses: docker/login-action@v2
+        uses: docker/login-action@v1
         with:
           username: ${{secrets.DOCKERHUB_USERNAME}}
           password: ${{secrets.DOCKERHUB_TOKEN}}
 
       - name: Push
         if: github.ref == 'refs/heads/master' || github.ref == 'refs/heads/main'
-        uses: docker/build-push-action@v3
+        uses: docker/build-push-action@v2
         with:
           context: image/
           file: image/Dockerfile
           tags: |
             rsafgdatascience/prototaip-notebook:${{steps.getrefs.outputs.sha12}}, rsafgdatascience/prototaip-notebook:latest
-          push: true
